--- a/css/common.css
+++ b/css/common.css
@@ -83,3 +83,21 @@ img {
   line-height: 1.5;
   letter-spacing: 0.04em;
 }
+
+.gallery {
+  max-width: 1440px;
+  padding: 100px 156px;
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 48px;
+  column-gap: 24px;
+}
+
+.gallery-item {
+  width: calc((100% - 2 * 24px) / 3);
+}
+
+.gallery-img {
+  object-fit: cover;
+  height: 100%;
+}
